[project]
name = "cartpole-q-learning"
version = "0.2.0"
description = "A cart pole balancing agent powered by Q-Learning"
authors = [
    {name = "Yuriy Guts", email = "yuriy.guts@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "matplotlib>=3.7.1",
    "gymnasium[classic-control]>=0.28.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.3.2",
    "pytest>=7.3.2",
    "ruff>=0.4.0",
    "ty>=0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cartpole"]

[tool.ruff]
line-length = 100

[tool.isort]
line_length = 100

[tool.black]
line-length = 100
